--- a/HA2/CMakeLists.txt
+++ b/HA2/CMakeLists.txt
@@ -2,5 +2,9 @@ cmake_minimum_required(VERSION 3.10)
 project(LAB_1 C)
 
 set(CMAKE_C_STANDARD 99)
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=c99 -Wall -Wextra -Wshadow")
+set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -O0 -g")
+set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/CMakeModules/")
 
-add_executable(LAB_1 main.c headers/stack.h sources/stack.c headers/queue.h sources/queue.c headers/bscds.h sources/node.c headers/node.h headers/bds.h)
+enable_testing()
+add_subdirectory(tests)
